--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,12 @@
   box-sizing: border-box;
   font-family: Roboto, sans-serif;
 }
+
+.slick-slide > div {
+  padding: 0 0.8rem;
+  box-sizing: border-box;
+  margin: 0 12px;
+}
+.slick-list {
+  margin: 0 -12px;
+}
